fix swagger info
