# pkg/apiserver/docs/swagger.json
@@ -19,18 +19,13 @@
                 "summary": "Authorization",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "id",
-                        "name": "access_id",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "key",
-                        "name": "secret_key",
-                        "in": "query",
-                        "required": true
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.AuthReqBody"
+                        }
                     }
                 ],
                 "responses": {
@@ -1510,12 +1505,20 @@
         }
     },
     "definitions": {
+        "api.AuthReqBody": {
+            "type": "object",
+            "properties": {
+                "access_id": {
+                    "type": "string"
+                },
+                "secret_key": {
+                    "type": "string"
+                }
+            }
+        },
         "api.AuthRspBody": {
             "type": "object",
             "properties": {
-                "success": {
-                    "type": "boolean"
-                },
                 "token": {
                     "type": "string"
                 }
@@ -4208,11 +4211,6 @@
         "v1alpha1.State": {
             "type": "string",
             "enum": [
-                "",
-                "ToBeMounted",
-                "ToBeUnMount",
-                "Mounted",
-                "NotReady",
                 "Ready",
                 "Maintain",
                 "Offline",
@@ -4246,14 +4244,14 @@
                 "Failed",
                 "Available",
                 "InUse",
-                "Offline"
+                "Offline",
+                "",
+                "ToBeMounted",
+                "ToBeUnMount",
+                "Mounted",
+                "NotReady"
             ],
             "x-enum-varnames": [
-                "MountPointStateEmpty",
-                "MountPointToBeMounted",
-                "MountPointToBeUnMount",
-                "MountPointMounted",
-                "MountPointNotReady",
                 "NodeStateReady",
                 "NodeStateMaintain",
                 "NodeStateOffline",
@@ -4287,7 +4285,12 @@
                 "OperationStateFailed",
                 "DiskStateAvailable",
                 "DiskStateInUse",
-                "DiskStateOffline"
+                "DiskStateOffline",
+                "MountPointStateEmpty",
+                "MountPointToBeMounted",
+                "MountPointToBeUnMount",
+                "MountPointMounted",
+                "MountPointNotReady"
             ]
         },
         "v1alpha1.StorageNodeCondition": {
